--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		   		<div class="container">
 		   			<div class="col-md-10 col-md-offset-1 text-center js-fullheight slider-text">
 		   				<div class="slider-text-inner">
-		   					<h2>Explore the new template.</h2>
+		   					<h2>Bom Dia.</h2>
 		   					<p><a href="http://twitter.com/gettempaltesco" target="_blank" class="btn btn-primary btn-lg">Follow @gettemplatesco</a></p>
 		   				</div>
 		   			</div>
