eccao produtos feita

--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="gtco-heading">
-							<h2 class="gtco-left">Services</h2>
-							<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+							<h2 class="gtco-left">Produzimos</h2>
 						</div>
 					</div>
 				</div>
@@ -133,45 +132,23 @@
 
 							<div class="col-md-12">
 								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-paper-clip"></i>
+									<span>
+										<img src="images/IMG_1169.JPG.jpg" class="img-thumbnail" style="image-orientation:90deg" width="227px" height="292px">
 									</span>
 									<div class="feature-copy">
-										<h3>Web Development</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+										<h3>Alcool</h3>
+										<p>Bruto/Vínico/Neutro</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-monitor"></i>
+									<span>
+										<img src="images/IMG_1174.JPG.jpg" class="img-thumbnail" style="image-orientation:90deg" width="227px" height="292px">
 									</span>
 									<div class="feature-copy">
-										<h3>Web Design</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-toggle"></i>
-									</span>
-									<div class="feature-copy">
-										<h3>Customer Support</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-layout"></i>
-									</span>
-									<div class="feature-copy">
-										<h3>Web Design</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+										<h3>Tanino Liquido</h3>
+										<p>Extracto Pelicular de Uva</p>
 									</div>
 								</div>
 							</div>
@@ -181,45 +158,83 @@
 						<div class="row">
 							<div class="col-md-12">
 								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-pencil"></i>
+									<span>
+										<img src="images/IMG_1168.JPG.jpg" class="img-thumbnail" style="image-orientation:90deg" width="227px" height="292px">
 									</span>
 									<div class="feature-copy">
-										<h3>Copy Writing</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+										<h3>Aguardentes</h3>
+										<p>Vìnica/Bagaceira</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-cog"></i>
+									<span>
+										<img src="images/IMG_1184.JPG.jpg" class="img-thumbnail" style="image-orientation:90deg" width="227px" height="292px">
 									</span>
 									<div class="feature-copy">
-										<h3>CMS Development</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+										<h3>Tartaráto de Calcio</h3>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<div class="gtco-heading">
+							<h2 class="gtco-left">Comercializamos</h2>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-6">
+						<div class="row">
+
+							<div class="col-md-12">
+								<div class="feature-left">
+									<span>
+										<img src="images/IMG_1169.JPG.jpg" class="img-thumbnail" style="image-orientation:90deg" width="227px" height="292px">
+									</span>
+									<div class="feature-copy">
+										<h3>Alcool</h3>
+										<p>Bruto/Vínico/Neutro</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-layers"></i>
+									<span>
+										<img src="images/IMG_1174.JPG.jpg" class="img-thumbnail" style="image-orientation:90deg" width="227px" height="292px">
 									</span>
 									<div class="feature-copy">
-										<h3>Data Gathering</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+										<h3>Tanino Liquido</h3>
+										<p>Extracto Pelicular de Uva</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box" data-animate-effect="fadeIn">
+						<div class="row">
+							<div class="col-md-12">
+								<div class="feature-left">
+									<span>
+										<img src="images/IMG_1168.JPG.jpg" class="img-thumbnail" style="image-orientation:90deg" width="227px" height="292px">
+									</span>
+									<div class="feature-copy">
+										<h3>Aguardentes</h3>
+										<p>Vìnica/Bagaceira</p>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-12">
 								<div class="feature-left">
-									<span class="icon">
-										<i class="icon-search"></i>
+									<span>
+										<img src="images/IMG_1184.JPG.jpg" class="img-thumbnail" style="image-orientation:90deg" width="227px" height="292px">
 									</span>
 									<div class="feature-copy">
-										<h3>Search Engine</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+										<h3>Tartaráto de Calcio</h3>
 									</div>
 								</div>
 							</div>
