--- a/index.html
+++ b/index.html
@@ -126,25 +126,50 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
-						<span>
-							<img src="images/IMG_1169.JPG.jpg" class="img-thumbnail" style="image-orientation:90deg">
-						</span>
-					</div>
-					<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
-						<span>
-							<img src="images/IMG_1174.JPG.jpg" class="img-thumbnail" style="image-orientation:90deg">
-						</span>
-					</div>
-					<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
-						<span>
-							<img src="images/IMG_1168.JPG.jpg" class="img-thumbnail" style="image-orientation:90deg">
-						</span>
-					</div>
-					<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
-						<span>
-							<img src="images/IMG_1184.JPG.jpg" class="img-thumbnail" style="image-orientation:90deg">
-						</span>
+					<div class="prods">
+						<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
+							<div class="thumbnail">
+						      <a href="images/IMG_1169.JPG.jpg">
+						        <img src="images/IMG_1169.JPG.jpg" alt="Nature" style="width:100%;image-orientation:90deg">
+						        <div class="caption">
+						          <h3>Alcool</h3>
+									<p>Bruto/Vínico/Neutro</p>
+						        </div>
+						      </a>
+						    </div>
+						</div>
+						<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
+							<div class="thumbnail">
+						      <a href="images/IMG_1174.JPG.jpg">
+						        <img src="images/IMG_1174.JPG.jpg" alt="Nature" style="width:100%;image-orientation:90deg">
+						        <div class="caption">
+									<h3>Tanino Liquido</h3>
+									<p>Extracto Pelicular de Uva</p>
+						        </div>
+						      </a>
+						    </div>
+						</div>
+						<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
+							<div class="thumbnail ce">
+						      <a href="images/IMG_1168.JPG.jpg">
+						        <img src="images/IMG_1168.JPG.jpg" alt="Nature" style="width:100%;image-orientation:90deg">
+						        <div class="caption">
+									<h3>Aguardentes</h3>
+									<p>Vìnica/Bagaceira</p>
+						        </div>
+						      </a>
+						    </div>
+						</div>
+						<div class="col-md-3 animate-box" data-animate-effect="fadeIn">
+							<div class="thumbnail">
+						      <a href="images/IMG_1184.JPG.jpg">
+						        <img src="images/IMG_1184.JPG.jpg" alt="Nature" style="width:100%;image-orientation:90deg">
+						        <div class="caption">
+									<h3>Tartaráto de Calcio</h3>		
+						        </div>
+						      </a>
+						    </div>
+						</div>
 					</div>
 				</div>
 				<br>
@@ -218,19 +243,22 @@
 		<div class="gtco-section" id="gtco-portfolio" data-section="portfolio">
 			<div class="gtco-container">
 				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
+						<h2>Instalações</h2>
+					</div>
+				</div>
+				<div class="row">
 					<dic class="col-md-12"> 
 						<div id="my-slider" class="carousel slide" data-ride="carousel">
-							<div class="carousel-inner" role="listbox">
+							<div class="carousel-inner imgs" role="listbox">
 								<div class="item active">
-									<img src="images/fundo.jpg" alt="tetas">
+									<img src="images/IMG_1169.JPG.jpg" alt="tetas" class="img-rounded">
 									<div class="carousel-caption">
-										<h1>Tettas</h1>
 									</div>
 								</div>
 								<div class="item">
-									<img src="images/IMG_1182.JPG.jpg" alt="tetas">
+									<img src="images/IMG_1172.JPG.jpg" alt="tetas">
 									<div class="carousel-caption">
-										<h1>Tettas</h1>
 									</div>
 								</div>
 							</div>
@@ -244,84 +272,21 @@
 			<div class="gtco-container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-						<h2>Frequently Ask Questions</h2>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						<h2>Diplomas e Certificados</h2>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-6">
-
-						<div class="gtco-accordion">
-							<div class="gtco-accordion-heading">
-								<div class="icon"><i class="icon-cross"></i></div>
-								<h3>What is Asymmetry?</h3>
-							</div>
-							<div class="gtco-accordion-content">
-								<div class="inner">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</div>
-						<div class="gtco-accordion">
-							<div class="gtco-accordion-heading">
-								<div class="icon"><i class="icon-cross"></i></div>
-								<h3>I have technical problem, who do I email?</h3>
-							</div>
-							<div class="gtco-accordion-content">
-								<div class="inner">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</div>
-						<div class="gtco-accordion">
-							<div class="gtco-accordion-heading">
-								<div class="icon"><i class="icon-cross"></i></div>
-								<h3>How do I use Asymmetry features?</h3>
-							</div>
-							<div class="gtco-accordion-content">
-								<div class="inner">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</div>
-
+					<div class="col-md-3">
+						<img src="images/FullSizeRender(1).jpg" class="img-thumbnail" width="240" height="360">
 					</div>
-					<div class="col-md-6">
-
-						<div class="gtco-accordion">
-							<div class="gtco-accordion-heading">
-								<div class="icon"><i class="icon-cross"></i></div>
-								<h3>What language are available?</h3>
-							</div>
-							<div class="gtco-accordion-content">
-								<div class="inner">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</div>
-						<div class="gtco-accordion">
-							<div class="gtco-accordion-heading">
-								<div class="icon"><i class="icon-cross"></i></div>
-								<h3>Can I have a username that is already taken?</h3>
-							</div>
-							<div class="gtco-accordion-content">
-								<div class="inner">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</div>
-						<div class="gtco-accordion">
-							<div class="gtco-accordion-heading">
-								<div class="icon"><i class="icon-cross"></i></div>
-								<h3>Is Asymmetry free?</h3>
-							</div>
-							<div class="gtco-accordion-content">
-								<div class="inner">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</div>
-
+					<div class="col-md-3">
+						<img src="images/FullSizeRender[2](1).jpg" class="img-thumbnail" width="240" height="360">
+					</div>
+					<div class="col-md-3">
+						<img src="images/IMG_1218.JPG.jpg" class="img-thumbnail" width="240" height="360" style="image-orientation:90deg">
+					</div>
+					<div class="col-md-3">
+						<img src="images/IMG_1219.JPG.jpg" class="img-thumbnail" width="240" height="360" style="image-orientation:90deg">
 					</div>
 				</div>
 			</div>
