--- a/index.html
+++ b/index.html
@@ -252,12 +252,15 @@
 						<div id="my-slider" class="carousel slide" data-ride="carousel">
 							<div class="carousel-inner imgs" role="listbox">
 								<div class="item active">
-									<img src="images/IMG_1169.JPG.jpg" alt="tetas" class="img-rounded">
-									<div class="carousel-caption">
+									<img src="images/instalcoes0.jpg" style="transform: rotate(90deg)" alt="tetas" class="img-rounded">
+									<div class="carousel-caption1">
+                                        Sociedade Lusitana de Destilação
+                                            Riachos - Portugal
+                                        Unidade de Produção
 									</div>
 								</div>
 								<div class="item">
-									<img src="images/IMG_1172.JPG.jpg" alt="tetas">
+									<img src="images/Riachos1.jpg" style="max-height: 300px"  class="img-rounded" alt="tetas">
 									<div class="carousel-caption">
 									</div>
 								</div>
